--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Behret's First Birthday Party!</title>
+	<title>Ezra's First Birthday Party!</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="ONEderful.png">
+    <link rel="icon" type="image/png" href="Cow.png">
         <style>
           /* Define the confetti particles */
           .confetti {
@@ -50,39 +50,43 @@
         </script>
             
 	<main>          
-        <img src="ONEderful.png" alt="Isn't She ONEderful Image" class="center shadow" width="450px">
+        <img src="HeaderText.png" alt="Holy Cow Ezra is One" class="center shadow" width="350px">
+<br><br>
+        <img src="Ezra.png" alt="Baby Ezra" class="center shadow" width="400px">
+        <br>
 <br>
-		<h3>Join Us in Celebrating Our Little Princess's First Birthday! It's hard to believe it's already been a year since our baby girl arrived! Please join us for a fun-filled day of cake and lots of love.</h3>
+		<h3 width="600px"></h3>Join Us in Celebrating Our Little Man's First Birthday! It's hard to believe it's already been a year since our baby boy arrived! Please join us for a fun-filled day of cake and lots of love.</h3>
+    <br><br>
         
-        <img src="behret.png" alt="Baby Girl" class="center shadow" width="250px">
+
+
 <br>
         <hr width="400px">
         <br>
         <h1>Amazon Wish List</h1>
-		<a href="https://www.amazon.com/registries/gl/guest-view/2PTD3Q0R14RRE" class="button">View Wish List</a>	
+		<a href="#" class="button">View Wish List</a>	
         <br><br>
         <hr width="400px">
 
         <h1>Party Details</h1>
         <br>
 		<ul>
-			<li><b>Saturday, April 8th</b></li>
-			<li><b>Time: </b>Drop In Anytime Between 10:00 AM - 2:00 PM</li>
-			<li><b>Location: </b>Click The RSVP Button Below To Text Tyler for Address/Directions</li>
+			<li><b>Saturday, June 24th</b></li>
+			<li><b>Time: </b>Drop In Anytime Between 12:00 PM - 3:00 PM</li>
+			<li><b>Location: </b>Click The RSVP Button Below To Text Sammi for Address/Directions</li>
 		</ul>
         <br><br>
         <hr width="400px">
 <br>
         <h1>Don't Forget To RSVP or Get Directions</h1>
 
-        <a href="sms:(+1)(803-389-8809)" class="button">RSVP Now</a>	
+        <a href="sms:(+1)(803-457-0629)" class="button">RSVP Now</a>	
 
         <br><br>
         <hr width="400px">
         <br>
     <h2>We Can't Wait To See You There!</h2>
-    <br><br>
-
+    <img src="Cow.png" alt="Holy Cow Ezra is One" class="center shadow" width="400px">
 
     </main>
 
