--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <hr width="400px">
         <br>
         <h1>Amazon Wish List</h1>
-		<a href="#" class="button">View Wish List</a>	
+		<a href="https://www.amazon.com/registries/gl/guest-view/3F14OTFCDZBLF" class="button">View Wish List</a>	
         <br><br>
         <hr width="400px">
 
